# timer_bar

./: LICENSE  README.md  pyproject.toml  setup.py
src/timer_bar/: __init__.py  main.py
