[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timer_bar"
version = "0.0.1"
authors = [
  { name="Jeff Griffiths", email="jkgriffiths93@gmail.com" },
]
description = "Simple graphic to show progress of a process"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
