[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timer_bar"
version = "1.0.2"
authors = [
  { name="Jeff Griffiths", email="jkgriffiths93@gmail.com" },
]
description = "Simple console graphic to show progress of a process"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jkgriffiths93/timer_bar"
